force-app/main/default/objects/doctor__c/doctor__c.object-meta.xml
<CustomObject>
    <description>This is the field where we talk about documentatiom</description>
    <label>doctor</label>
    <nameField>
        <label>builder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>doctor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>