force-app/main/default/objects/doctor__c/fields/coke__c.field-meta.xml
<CustomField>
    <fullName>coke__c</fullName>
    <label>coke</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>