force-app/main/default/objects/doctor__c/fields/MR__c.field-meta.xml
<CustomField>
    <fullName>MR__c</fullName>
    <label>MR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>abc</fullName>
            </value>
            <value>
                <fullName>gbh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>