force-app/main/default/objects/doctor__c/fields/teacher__c.field-meta.xml
<CustomField>
    <fullName>teacher__c</fullName>
    <description>orientation of knowledge</description>
    <label>teacher</label>
    <type>Email</type>
</CustomField>